--- a/app/blocks/layout-default/layout-default.jade
+++ b/app/blocks/layout-default/layout-default.jade
@@ -3,6 +3,7 @@ include /../node_modules/jade-injected/jade-injected
 include ../page/page
 include ../header/header
 include ../content/content
+include ../footer/footer
 include ../scripts/scripts
 
 doctype html
@@ -12,4 +13,5 @@ html(lang='ru')
 		+content
 			+header()
 			block content
+			+footer()
 		+scripts(['app.min.js'])
