--- a/app/blocks/footer/footer.jade
+++ b/app/blocks/footer/footer.jade
@@ -2,5 +2,5 @@ mixin footer()
 
 	+b('footer').footer
 		+e.copyright
-			+e('img').logo(src='images/small_logo.png' alt='ДФШ Юниор')
-			+e('span').text Футбольный клуб ДФШ Юниор
+			+e('img').logo(src='assets/images/logo.png' alt='ДФШ Юниор')
+			+e('span').text &copy; Футбольная команда 2016
