--- a/app/blocks/footer/footer.styl
+++ b/app/blocks/footer/footer.styl
@@ -1,5 +1,21 @@
 .footer
+	padding-top $(5px)
+	padding-bottom $(5px)
+	padding-left $(20px)
+	padding-right $(20px)
+	font-size 0
 	
 	&__copyright
 		display inline-block
 		vertical-align middle
+		
+	&__logo
+		display inline-block
+		vertical-align middle
+		size $(40px)
+		margin-right $(15px)
+		
+	&__text
+		display inline-block
+		vertical-align middle
+		font-size $(14px)
