--- a/app/blocks/head/head.jade
+++ b/app/blocks/head/head.jade
@@ -50,5 +50,6 @@ head
 	title= pageTitle || ''
 	meta(name='description' content=pageDescription || '')
 	meta(name='keywords' content=pageKeywords || '')
-
+	
+	link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
 	link(href='/assets/styles/app.min.css?t=' + timestamp rel='stylesheet')
